--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -92,7 +92,7 @@
                         </div>
                         <span class="button-round_active button-round_next"></span>   
                     </div>
-                    <button class="button button_colored"></button>
+                    <button class="button button_colored">Get to know the rest</button>
                 </div>
             </div>
         </section>
@@ -102,39 +102,39 @@
                     <h2 class="section-title">How you can help our shelter</h2>
                     <div class="help__list">
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-pet-food.svg" alt="Pet food" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-pet-food.svg" alt="Pet food" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Pet food</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-transportation.svg" alt="Transportation" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-transportation.svg" alt="Transportation" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Transportation</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-toys.svg" alt="Toys" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-toys.svg" alt="Toys" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Toys</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-bowls-and-cups.svg" alt="Bowls and cups" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-bowls-and-cups.svg" alt="Bowls and cups" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Bowls and cups</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-shampoos.svg" alt="Shampoos" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-shampoos.svg" alt="Shampoos" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Shampoos</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-vitamins.svg" alt="Vitamins" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-vitamins.svg" alt="Vitamins" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Vitamins</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-medicines.svg" alt="Medicines" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-medicines.svg" alt="Medicines" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Medicines</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-collars-leashes.svg" alt="Collars / leashes" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-collars-leashes.svg" alt="Collars / leashes" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Collars / leashes</h4>
                         </div>
                         <div class="help-item">
-                            <img src="../../assets/icons/how-you-can-help/icon-sleeping-area.svg" alt="Sleeping areas" class="help-item__img" width="60">
+                            <img src="../../assets/icons/how-you-can-help/icon-sleeping-area.svg" alt="Sleeping areas" class="help-item__img" width="60px">
                             <h4 class="help-item__content">Sleeping areas</h4>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                     <div class="donation__content">
                         <h2 class="section-title">You can also make a donation</h2>
                         <h5>Name of the bank / Type of bank account</h5>
-                        <input type="number" class="card-input" placeholder="XXXX XXXX XXXX XXXX" pattern="[0-9]{14,23}" required>
+                        <input type="text" class="card-input" placeholder="XXXX XXXX XXXX XXXX" pattern="[0-9]{14,23}" required>
                     </div>
                     <p class="footnote">
                         Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
@@ -163,26 +163,26 @@
                 <div class="footer__content">
                     <h2 class="section-title footer__section-title">For questions and suggestions</h2>
                     <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" width="40">
+                        <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" width="40px" height="40px">
                         <a href="mailto:email@shelter.com">email@shelter.com</a>
                     </div>
                     <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" width="40">
+                        <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" width="40px" height="40px">
                         <a href="tel:+136745677554">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="footer__content">
                     <h2 class="section-title footer__section-title">We are waiting for your visit</h2>
                     <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" width="40">
+                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" width="40px" height="40px">
                         1 Central Street, Boston (entrance from the store)
                     </div>
                     <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" width="40">
-                        1 Central Street, Boston (entrance from the store)
+                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" width="40px" height="40px">
+                        18 South Park, London
                     </div>
                 </div>
-                <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300">
+                <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300px">
             </div>
         </div>
     </footer>
