feat: add scss structure

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shelter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="../../assets/icons/favicon.ico">
     <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <header class="header">
         <div class="wrapper">
-            <div class="logo">
-                <p class="logo__title">Cozy House</p>
-                <p class="logo__subtitle">Shelter for pets in Boston</p>
-            </div>
+            <a href="#" class="logo-link">
+                <div class="logo">
+                    <p class="logo__title">Cozy House</p>
+                    <p class="logo__subtitle">Shelter for pets in Boston</p>
+                </div>
+            </a>
             <div class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">About the shelter</a></li>
@@ -61,7 +63,7 @@
             <div class="wrapper">
                 <div class="our-friends__container">
                     <h2 class="section-title">Our friends who are looking for a house</h2>
-                    <div class="slide-show">
+                    <div class="carousel">
                         <span class="button-round_active button-round_prev"></span>
                         <div class="pets">
                             <div class="pet">
