feat: update html

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -70,7 +70,7 @@
                                 <div class="pet__cover">
                                     <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
                                 </div>
-                                <h3 class="pet__name">Katrine</h3>
+                                <h3>Katrine</h3>
                                 <button class="button button_bordered">Learn more</button>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                                 <div class="pet__cover">
                                     <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
                                 </div>
-                                <h3 class="pet__name">Katrine</h3>
+                                <h3>Katrine</h3>
                                 <button class="button button_bordered">Learn more</button>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                 <div class="pet__cover">
                                     <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
                                 </div>
-                                <h3 class="pet__name">Katrine</h3>
+                                <h3>Katrine</h3>
                                 <button class="button button_bordered">Learn more</button>
                             </div>
                         </div>
@@ -105,39 +105,39 @@
                     <div class="help__list">
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-pet-food.svg" alt="Pet food" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Pet food</h4>
+                            <h4>Pet food</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-transportation.svg" alt="Transportation" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Transportation</h4>
+                            <h4>Transportation</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-toys.svg" alt="Toys" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Toys</h4>
+                            <h4>Toys</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-bowls-and-cups.svg" alt="Bowls and cups" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Bowls and cups</h4>
+                            <h4>Bowls and cups</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-shampoos.svg" alt="Shampoos" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Shampoos</h4>
+                            <h4>Shampoos</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-vitamins.svg" alt="Vitamins" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Vitamins</h4>
+                            <h4>Vitamins</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-medicines.svg" alt="Medicines" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Medicines</h4>
+                            <h4>Medicines</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-collars-leashes.svg" alt="Collars / leashes" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Collars / leashes</h4>
+                            <h4>Collars / leashes</h4>
                         </div>
                         <div class="help-item">
                             <img src="../../assets/icons/how-you-can-help/icon-sleeping-area.svg" alt="Sleeping areas" class="help-item__img" width="60px">
-                            <h4 class="help-item__content">Sleeping areas</h4>
+                            <h4>Sleeping areas</h4>
                         </div>
                     </div>
                 </div>
