feat: add header layout

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -12,19 +12,21 @@
 <body>
     <header class="header">
         <div class="wrapper">
-            <a href="#" class="logo-link">
-                <div class="logo">
-                    <p class="logo__title">Cozy House</p>
-                    <p class="logo__subtitle">Shelter for pets in Boston</p>
-                </div>
-            </a>
-            <div class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">About the shelter</a></li>
-                    <li class="nav__item"><a href="../pets/index.html" class="nav__link">Our pets</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Help the shelter</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
-                </ul>
+            <div class="header-container">
+                <a href="#" class="logo-link">
+                    <div class="logo">
+                        <p class="logo__title">Cozy House</p>
+                        <p class="logo__subtitle">Shelter for pets in Boston</p>
+                    </div>
+                </a>
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item nav__item_active"><a href="#" class="nav__link">About the shelter</a></li>
+                        <li class="nav__item"><a href="../pets/index.html" class="nav__link">Our pets</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Help the shelter</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
@@ -37,7 +39,7 @@
                         <p class="content">
                             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                         </p>
-                        <button class="button button_colored">Make a friend</button>
+                        <button class="button button-oval button_colored">Make a friend</button>
                     </div>
                     <img src="../../assets/images/start-screen-puppy.png" alt="Start screen puppy" class="start-screen__img" height="100%">
                 </div>
@@ -64,14 +66,14 @@
                 <div class="our-friends__container">
                     <h2 class="section-title">Our friends who are looking for a house</h2>
                     <div class="carousel">
-                        <span class="button-round_active button-round_prev"></span>
+                        <span class="button button-round button-round_active button-round_prev"></span>
                         <div class="pets">
                             <div class="pet">
                                 <div class="pet__cover">
                                     <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
                                 </div>
                                 <h3>Katrine</h3>
-                                <button class="button button_bordered">Learn more</button>
+                                <button class="button button-oval button_bordered">Learn more</button>
                             </div>
                         </div>
                         <div class="pets">
@@ -80,7 +82,7 @@
                                     <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
                                 </div>
                                 <h3>Katrine</h3>
-                                <button class="button button_bordered">Learn more</button>
+                                <button class="button button-oval button_bordered">Learn more</button>
                             </div>
                         </div>
                         <div class="pets">
@@ -89,12 +91,12 @@
                                     <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
                                 </div>
                                 <h3>Katrine</h3>
-                                <button class="button button_bordered">Learn more</button>
+                                <button class="button button-oval button_bordered">Learn more</button>
                             </div>
                         </div>
-                        <span class="button-round_active button-round_next"></span>   
+                        <span class="button button-round button-round_active button-round_prev"></span>   
                     </div>
-                    <button class="button button_colored">Get to know the rest</button>
+                    <button class="button button-oval button_colored">Get to know the rest</button>
                 </div>
             </div>
         </section>
