feat: update footer links

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -174,14 +174,18 @@
             <div class="footer__container">
                 <div class="footer__content">
                     <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
-                    <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32px">
-                        <a href="mailto:email@shelter.com">email@shelter.com</a>
-                    </div>
-                    <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32px">
-                        <a href="tel:+136745677554">+13 674 567 75 54</a>
-                    </div>
+                    <a href="mailto:email@shelter.com">
+                        <div class="footer-item">
+                            <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32px">
+                            email@shelter.com
+                        </div>
+                    </a>
+                    <a href="tel:+136745677554">
+                        <div class="footer-item">
+                            <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32px">
+                            +13 674 567 75 54
+                        </div>
+                    </a>  
                 </div>
                 <div class="footer__content">
                     <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
