--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -13,7 +13,7 @@
     <div class="gradient">
         <header class="header">
             <div class="wrapper">
-                <div class="header-container">
+                <div class="header__container">
                     <a href="#" class="logo-link">
                         <div class="logo">
                             <p class="logo__title">Cozy House</p>
@@ -22,10 +22,10 @@
                     </a>
                     <nav class="nav">
                         <ul class="nav__list">
-                            <li class="nav__item nav__item_active"><a href="#" class="nav__link">About the shelter</a></li>
-                            <li class="nav__item"><a href="../pets/index.html" class="nav__link">Our pets</a></li>
-                            <li class="nav__item"><a href="#donation" class="nav__link">Help the shelter</a></li>
-                            <li class="nav__item"><a href="#footer" class="nav__link">Contacts</a></li>
+                            <li class="nav__item nav__item_light nav__item_light_active"><a href="#" class="nav__link">About the shelter</a></li>
+                            <li class="nav__item nav__item_light"><a href="../pets/index.html" class="nav__link">Our pets</a></li>
+                            <li class="nav__item nav__item_light"><a href="#donation" class="nav__link">Help the shelter</a></li>
+                            <li class="nav__item nav__item_light"><a href="#footer" class="nav__link">Contacts</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -79,8 +79,6 @@
                                     <button class="button button-oval button-bordered">Learn more</button>
                                 </div>
                             </div>
-                        </div>
-                        <div class="pets">
                             <div class="pet">
                                 <div class="pet__cover">
                                     <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Katrine" class="pet__img">
@@ -90,8 +88,6 @@
                                     <button class="button button-oval button-bordered">Learn more</button>
                                 </div>
                             </div>
-                        </div>
-                        <div class="pets">
                             <div class="pet">
                                 <div class="pet__cover">
                                     <img src="../../assets/images/our-friends/pets-woody.png" alt="Katrine" class="pet__img">
@@ -172,7 +168,7 @@
     <footer class="footer" id="footer">
         <div class="wrapper">
             <div class="footer__container">
-                <div class="footer__content">
+                <div class="footer__content footer__content_first">
                     <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
                     <a href="mailto:email@shelter.com">
                         <div class="footer-item">
@@ -187,7 +183,7 @@
                         </div>
                     </a>  
                 </div>
-                <div class="footer__content">
+                <div class="footer__content footer__content_second">
                     <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
                     <div class="footer-item">
                         <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
