feat: update flex for our-friend and help containers

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -35,7 +35,7 @@
             <div class="wrapper">
                 <div class="our-friends__container our-friends__container_our-pets-page">
                     <h2 class="section-title section-title_center">Our friends who<br>are looking for a house</h2>
-                    <div class="pets">
+                    <div class="pets pets_our-pets-page">
                         <div class="pet">
                             <div class="pet__cover">
                                 <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
