feat: update in according with specification

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="script.js" defer></script>
 </head>
 <body>
-    <header class="header">
+    <header class="header header_sticky">
         <div class="wrapper">
             <div class="header__container header__container_our-pets-page">
                 <a href="../main/index.html" class="logo-link">
@@ -24,7 +24,7 @@
                         <li class="nav__item nav__item_dark"><a href="../main/index.html" class="nav__link">About the shelter</a></li>
                         <li class="nav__item nav__item_dark nav__item_dark_active"><a href="#" class="nav__link">Our pets</a></li>
                         <li class="nav__item nav__item_dark"><a href="../main/#donation" class="nav__link">Help the shelter</a></li>
-                        <li class="nav__item nav__item_dark"><a href="../main/#donation" class="nav__link">Contacts</a></li>
+                        <li class="nav__item nav__item_dark"><a href="#footer" class="nav__link">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -34,7 +34,7 @@
         <section class="our-friends">
             <div class="wrapper">
                 <div class="our-friends__container our-friends__container_our-pets-page">
-                    <h2 class="section-title section-title_center">Our friends who<br>are looking for a house</h2>
+                    <h1 class="section-title section-title_center">Our friends who<br>are looking for a house</h1>
                     <div class="pets pets_our-pets-page">
                         <div class="pet">
                             <div class="pet__cover">
@@ -140,14 +140,18 @@
                 </div>
                 <div class="footer__content footer__content_second">
                     <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
-                    <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
-                        1 Central Street, Boston<br>(entrance from the store)
-                    </div>
-                    <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
-                        18 South Park, London
-                    </div>
+                    <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                        <div class="footer-item">
+                            <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                            1 Central Street, Boston<br>(entrance from the store)
+                        </div>
+                    </a>
+                    <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                        <div class="footer-item">
+                            <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                            18 South Park, London
+                        </div>
+                    </a>
                 </div>
                 <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300px">
             </div>
