--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -39,7 +39,9 @@
                         <p class="content content-light">
                             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                         </p>
-                        <button class="button button-oval button-colored">Make a friend</button>
+                        <a href="#our-friens">
+                            <button class="button button-oval button-colored">Make a friend</button>
+                        </a> 
                     </div>
                     <img src="../../assets/images/start-screen-puppy.png" alt="Start screen puppy" class="start-screen__img" height="100%">
                 </div>
@@ -63,7 +65,7 @@
                 </div>
             </div>
         </section>
-        <section class="our-friends">
+        <section class="our-friends" id="our-friens">
             <div class="wrapper">
                 <div class="our-friends__container">
                     <h2 class="section-title section-title_center">Our friends who<br>are looking for a house</h2>
@@ -100,7 +102,9 @@
                         </div>
                         <button class="button button-round button-bordered button_next">&#129046;</button> <!--Maybe &#10142;-->  
                     </div>
-                    <button class="button button-oval button-colored">Get to know the rest</button>
+                    <a href="../pets/index.html">
+                        <button class="button button-oval button-colored">Get to know the rest</button>
+                    </a>
                 </div>
             </div>
         </section>
@@ -156,7 +160,7 @@
                     <div class="donation__content">
                         <h2 class="section-title">You can also<br>make a donation</h2>
                         <h5>Name of the bank / Type of bank account</h5>
-                        <input type="text" placeholder="XXXX XXXX XXXX XXXX" pattern="[0-9]{14,23}" required autofocus autocomplete="cc-number" class="card-input">
+                        <a href="#!"><input type="text" placeholder="XXXX XXXX XXXX XXXX" pattern="[0-9]{14,23}" required autofocus autocomplete="cc-number" class="card-input"></a>
                         <p class="footnote">
                             Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
@@ -185,14 +189,18 @@
                 </div>
                 <div class="footer__content footer__content_second">
                     <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
-                    <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
-                        1 Central Street, Boston<br>(entrance from the store)
-                    </div>
-                    <div class="footer-item">
-                        <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
-                        18 South Park, London
-                    </div>
+                    <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                        <div class="footer-item">
+                            <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                            1 Central Street, Boston<br>(entrance from the store)
+                        </div>
+                    </a>
+                    <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                        <div class="footer-item">
+                            <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                            18 South Park, London
+                        </div>
+                    </a>
                 </div>
                 <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300px">
             </div>
