feat: add adaptivity for tablet+

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -39,8 +39,8 @@
                         <p class="content content-light">
                             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                         </p>
-                        <a href="#our-friens">
-                            <button class="button button-oval button-colored">Make a friend</button>
+                        <a href="#our-friens" class="start-screen__link">
+                            <button class="button button-oval button-colored start-screen__button">Make a friend</button>
                         </a> 
                     </div>
                     <img src="../../assets/images/start-screen-puppy.png" alt="Start screen puppy" class="start-screen__img" height="100%">
@@ -83,16 +83,16 @@
                             </div>
                             <div class="pet">
                                 <div class="pet__cover">
-                                    <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Katrine" class="pet__img">
+                                    <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="pet__img">
                                 </div>
                                 <div class="pet__content">
                                     <h3>Jennifer</h3>
                                     <button class="button button-oval button-bordered">Learn more</button>
                                 </div>
                             </div>
-                            <div class="pet">
+                            <div class="pet desktop_hidden">
                                 <div class="pet__cover">
-                                    <img src="../../assets/images/our-friends/pets-woody.png" alt="Katrine" class="pet__img">
+                                    <img src="../../assets/images/our-friends/pets-woody.png" alt="Woody" class="pet__img">
                                 </div>
                                 <div class="pet__content">
                                     <h3>Woody</h3>
@@ -103,7 +103,7 @@
                         <button class="button button-round button-bordered button_next">&#129046;</button> <!--Maybe &#10142;-->  
                     </div>
                     <a href="../pets/index.html">
-                        <button class="button button-oval button-colored">Get to know the rest</button>
+                        <button class="button button-oval button-colored pets__button">Get to know the rest</button>
                     </a>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                     <div class="donation__content">
                         <h2 class="section-title">You can also<br>make a donation</h2>
                         <h5>Name of the bank / Type of bank account</h5>
-                        <a href="#!"><input type="text" placeholder="XXXX XXXX XXXX XXXX" pattern="[0-9]{14,23}" required autofocus autocomplete="cc-number" class="card-input"></a>
+                        <a href="javascript:void(0)"><input type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" autocomplete="cc-number" maxlength="25" placeholder="8380 2880 8028 8791 7435" class="card-input"></a>
                         <p class="footnote">
                             Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
@@ -172,7 +172,7 @@
     <footer class="footer" id="footer">
         <div class="wrapper">
             <div class="footer__container">
-                <div class="footer__content footer__content_first">
+                <div class="footer__content footer__content_contacts">
                     <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
                     <a href="mailto:email@shelter.com">
                         <div class="footer-item">
@@ -187,7 +187,7 @@
                         </div>
                     </a>  
                 </div>
-                <div class="footer__content footer__content_second">
+                <div class="footer__content footer__content_address">
                     <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
                     <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                         <div class="footer-item">
