--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -123,7 +123,7 @@
     <footer class="footer" id="footer">
         <div class="wrapper">
             <div class="footer__container">
-                <div class="footer__content footer__content_first">
+                <div class="footer__content footer__content_contacts">
                     <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
                     <a href="mailto:email@shelter.com">
                         <div class="footer-item">
@@ -138,7 +138,7 @@
                         </div>
                     </a>  
                 </div>
-                <div class="footer__content footer__content_second">
+                <div class="footer__content footer__content_address">
                     <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
                     <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                         <div class="footer-item">
