--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -35,8 +35,8 @@
             <div class="wrapper">
                 <div class="start-screen__container">
                     <div class="start-screen__content">
-                        <h1 class="project-title">Not only people need a house</h1>
-                        <p class="content content-light">
+                        <h1 class="project-title">Not only people<br>need a house</h1>
+                        <p class="text text-light">
                             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                         </p>
                         <a href="#our-friens" class="start-screen__link">
@@ -54,11 +54,11 @@
                 <div class="about__container">
                     <img src="../../assets/images/about-pets.png" alt="About-pets" class="about__img" width="300px">
                     <div class="about__content">
-                        <h2 class="section-title">About the shelter <br>“Cozy House”</h2>
-                        <p class="content content-dark">
+                        <h2 class="section-title">About the shelter<br>“Cozy House”</h2>
+                        <p class="text text_justified text-dark">
                             Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
                         </p>
-                        <p class="content content-dark">
+                        <p class="text text_justified text-dark">
                             We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.
                         </p>
                     </div>
@@ -70,7 +70,7 @@
                 <div class="our-friends__container">
                     <h2 class="section-title section-title_center">Our friends who<br>are looking for a house</h2>
                     <div class="carousel">
-                        <button class="button button-round button-bordered button_prev">&#129044;</button>
+                        <button class="button button-round button-bordered button_prev tablet_hidden">&#129044;</button>
                         <div class="pets">
                             <div class="pet">
                                 <div class="pet__cover">
@@ -81,7 +81,7 @@
                                     <button class="button button-oval button-bordered">Learn more</button>
                                 </div>
                             </div>
-                            <div class="pet">
+                            <div class="pet tablet_hidden">
                                 <div class="pet__cover">
                                     <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="pet__img">
                                 </div>
@@ -100,7 +100,11 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="button button-round button-bordered button_next">&#129046;</button> <!--Maybe &#10142;-->  
+                        <button class="button button-round button-bordered button_next tablet_hidden">&#129046;</button> <!--Maybe &#10142;-->
+                        <div class="tablet-controllers">
+                            <button class="button button-round button-bordered button_prev">&#129044;</button>
+                            <button class="button button-round button-bordered button_next">&#129046;</button>
+                        </div>  
                     </div>
                     <a href="../pets/index.html">
                         <button class="button button-oval button-colored pets__button">Get to know the rest</button>
@@ -156,11 +160,11 @@
         <section class="donation" id="donation">
             <div class="wrapper">
                 <div class="donation__container">
-                    <img src="../../assets/images/donation-dog.png" alt="donation-img" class="donation__img" width="550">
+                    <img src="../../assets/images/donation-dog.png" alt="donation-img" class="donation__img" width="505">
                     <div class="donation__content">
                         <h2 class="section-title">You can also<br>make a donation</h2>
                         <h5>Name of the bank / Type of bank account</h5>
-                        <a href="javascript:void(0)"><input type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" autocomplete="cc-number" maxlength="25" placeholder="8380 2880 8028 8791 7435" class="card-input"></a>
+                        <a href="javascript:void(0)"><input type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" autocomplete="cc-number" maxlength="24" placeholder="8380 2880 8028 8791 7435" class="card-input"></a>
                         <p class="footnote">
                             Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
@@ -173,7 +177,7 @@
         <div class="wrapper">
             <div class="footer__container">
                 <div class="footer__content footer__content_contacts">
-                    <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
+                    <h2 class="section-title footer__section-title">For questions and suggestions</h2>
                     <a href="mailto:email@shelter.com">
                         <div class="footer-item">
                             <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32px">
@@ -188,7 +192,7 @@
                     </a>  
                 </div>
                 <div class="footer__content footer__content_address">
-                    <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
+                    <h2 class="section-title footer__section-title">We are waiting for your visit</h2>
                     <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                         <div class="footer-item">
                             <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
